Web page responsive

--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
     <title>404 Page</title>
   </head>
   <body>
-    <header>
-      <strong>404 NOT FOUND</strong>
-    </header>
+    <div>
+      <header>
+        <strong>404 NOT FOUND</strong>
+      </header>
 
-    <section>
-      <div class="left">
-        <img src="./assets/Scarecrow.png" alt="Scarecrow" />
-      </div>
-      <div class="right">
-        <h1>I have bad news for you</h1>
-        <p>
-          The page you are looking for might be removed or is temporarily
-          unavailable
-        </p>
-        <button type="button">BACK TO HOMEPAGE</button>
-      </div>
-    </section>
-    <footer>
-      <span>Leonardo C. Almeida @ DevChallenges.io</span>
-    </footer>
+      <section>
+        <div class="left">
+          <img src="./assets/Scarecrow.png" alt="Scarecrow" />
+        </div>
+        <div class="right">
+          <h1>I have bad news for you</h1>
+          <p>
+            The page you are looking for might be removed or is temporarily
+            unavailable
+          </p>
+          <button type="button">BACK TO HOMEPAGE</button>
+        </div>
+      </section>
+      <footer>
+        <span>Leonardo C. Almeida @ DevChallenges.io</span>
+      </footer>
+    </div>
   </body>
 </html>
